samples/_failures_safe/1761087068_5cc521_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ce8d373.c: In function ‘main’:
./samples/SAFE/__tmp_7ce8d373.c:137:9: error: expected identifier or ‘(’ at end of input
  137 |         for (int
      |         ^~~
./samples/SAFE/__tmp_7ce8d373.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7ce8d373.c:137:9: error: expected declaration or statement at end of input
